--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!doctype html><html>
+<!doctype html>
+<!--ACES hakathon 2014-->
+<html>
     <head>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap.css">
